# lele-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: gui-design.md  phase-4-issue.md  projection-store.md
docs/adr/: 0001-storage-backend.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: HealthBar.svelte  LessonCard.svelte  Shell.svelte  SimilarPanel.svelte  VaultTree.svelte
frontend/src/lib/: api.ts  markdown.ts  router.ts
frontend/src/routes/: Browse.svelte  Detail.svelte  Editor.svelte  Ops.svelte  Stats.svelte  Timeline.svelte  Vault.svelte
scripts/: build-gui.sh  e2e-prepare.py  e2e-serve.sh  lele-api-dev.sh  lele-api-refresh.sh  lele-api.sh
src/lele_manager/: composition.py  config.py  model.py  paths.py  storage.py
src/lele_manager/adapters/: __init__.py  canonical_markdown_vault.py  json_candidate_repository.py  jsonl_projection_store.py  raw_sources.py  vault_jsonl_refresh.py
src/lele_manager/api/: server.py  tritalele.py  ui.html
src/lele_manager/application/: __init__.py  candidate_approval.py  candidate_review.py  dataframes.py  external_lessons.py  lesson_candidate.py  raw_source.py  raw_source_chunking.py  raw_source_ingestion.py
src/lele_manager/cli/: add_lesson.py  csv2json.py  file_watcher.py  import_from_dir.py  lele.py  list_lessons.py  suggest_similar.py  train_topic_model.py  tritalele.py
src/lele_manager/core/: analytics.py  config.py  deduplication.py  doctor.py  export.py  import_plan.py  json_compat.py  paths.py  projection_store.py  ranking.py  storage.py  vault.py
src/lele_manager/ml/: features.py  similarity.py  similarity_backend.py  similarity_service.py  text_ml.py  topic_model.py
tests/: conftest.py  smoke.sh  test_add_lesson_cli.py  test_analytics.py  test_api_basic.py  test_api_duplicates.py  test_api_external_lessons.py  test_api_get_similar_uses_service.py  test_api_similar_edgecases.py  test_api_similar_explain.py  test_api_similarity_cache.py  test_api_stats_timeline.py  test_api_tritalele.py  test_api_vault.py  test_candidate_approval.py  test_candidate_repository_contract.py  test_candidate_review.py  test_cli_duplicates.py  test_cli_suggest.py  test_cli_suggest_similar_uses_service.py  test_cli_tritalele.py  test_csv2json.py  test_deduplication.py  test_doctor.py  test_editor_suggest_endpoint.py  test_export_search.py  test_external_lessons_service.py  test_file_watcher.py  test_frontmatter_hash.py  test_guardrail_server_imports.py  test_gui_app.py  test_import_from_dir.py  test_import_from_dir_cli.py  test_import_plan.py  test_legacy_jsonl_append.py  test_lele_cli.py  test_lesson_candidate.py  test_lesson_model.py  test_lessons_storage.py  test_list_lessons_cli.py  (+21 more)
