[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lele-manager"
version = "1.1.1"
description = "Lesson Learned Manager: archivio intelligente di lesson learned testuali."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Giancarlo Cicellyn Comneno" }
]

[project.scripts]
lele = "lele_manager.cli.lele:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "fastapi",
    "uvicorn",
    "pandas",
    "scikit-learn",
    "httpx",
    "ruff",
    "pre-commit",
    "bandit",
    "pip-audit",
]

[tool.setuptools.packages.find]
where = ["src"]
