[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lele-manager"
version = "1.9.0"
description = "Lesson Learned Manager: archivio intelligente di lesson learned testuali."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Giancarlo Cicellyn Comneno" }
]
license = { text = "MIT" }
dependencies = [
  "platformdirs>=4.0.0",
  "fastapi",
  "uvicorn",
  "pandas",
  "scikit-learn",
  "httpx",
  "PyYAML",
]

[project.scripts]
lele = "lele_manager.cli.lele:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "fastapi",
    "uvicorn",
    "pandas",
    "scikit-learn",
    "httpx",
    "ruff",
    "pre-commit",
    "bandit",
    "pip-audit",
    "mypy",
    "pandas-stubs",
    "types-PyYAML",
    "scipy-stubs; python_version >= '3.12'",
]

[tool.mypy]
python_version = "3.12"
files = ["src/lele_manager"]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "joblib",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "perf: performance guardrails (non-benchmark, should be stable in CI)",
]

[tool.setuptools.package-data]
"lele_manager.api" = ["ui.html"]
"lele_manager.gui" = ["static/**/*"]
